Fixed centering of portfolio items on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,6 @@ body {
     text-align: center;
     color: #FFFFFF;
     text-shadow: 0px 2px 2px rgba(50, 50, 50, 1);
-    /*background-attachment: fixed;*/
     transition: .02s ease-in-out;
 }
 
@@ -210,4 +209,11 @@ footer .icon-wrapper i {
         font-size: 18px;
     }
 
+}
+
+@media screen and (max-width: 817px) {
+    
+    .portfolio-content {
+        justify-content: center;
+    }
 }
